# scan_eml

./: CMakeLists.txt  README.md
eml_examples/: example1.eml  example3.eml  example4.eml  fake_eml.eml
include/: base64.h  extractFiles.h  saveLog.h  searchFile.h  validateFile.h  validatePesel.h
src/: extractFiles.c  main.c  searchFile.c  validateFile.c  validatePesel.c
src/utils/: base64.c  saveLog.c  validateFile.c  validatePesel.c
